--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,15 @@
 /vendor/
 /docker/mysql
 /.idea
+composer.lock
 ###< symfony/framework-bundle ###
+
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
